# VFC_Kimi

./: .gitignore  CMakeLists.txt  fix_glad.bat  setup.py  setup_effects.bat  setup_effects_system.bat  setup_fixed.bat  setup_log.txt  setup_project.bat
include/: glad.c
include/glad/: glad.h
src/: main.cpp  main_effects.cpp
src/effects/: Distortion2D.cpp  Distortion2D.h  Effect.h  EffectManager.cpp  EffectManager.h  Filter2D.cpp  Filter2D.h
src/graphics/: Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h
src/tracking/: EdgeAwareFilter.cpp  FaceTracker.cpp  FaceTracker.h  MulticlassSegmenter.cpp  MulticlassSegmenter.h
